@@ -1,10 +1,12 @@
-package co.com.niki.algorithms.exercises.Warm;
+package co.com.niki.algorithms.exercises.warm;
 
-import java.io.*;
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
+import java.io.FileWriter;
+import java.io.IOException;
+import java.io.InputStreamReader;
 import java.util.List;
 import java.util.stream.Stream;
-
-import static java.util.stream.Collectors.toList;
 
 /**
  * Jump across an array without selecting 1s and you can move maximum of 2 positions
@@ -16,11 +18,9 @@ public class Clouds {
         BufferedReader bufferedReader = new BufferedReader(new InputStreamReader(System.in));
         BufferedWriter bufferedWriter = new BufferedWriter(new FileWriter(System.getenv("OUTPUT_PATH")));
 
-        int n = Integer.parseInt(bufferedReader.readLine().trim());
-
         List<Integer> c = Stream.of(bufferedReader.readLine().replaceAll("\\s+$", "").split(" "))
                 .map(Integer::parseInt)
-                .collect(toList());
+                .toList();
 
         int result = jumpingOnClouds(c);
 
